--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write '**/*.js' --ignore-path .gitignore"
   },
   "dependencies": {
+    "escape-string-regexp": "^2.0.0",
     "get-monorepo-packages": "^1.2.0"
   },
   "devDependencies": {
