--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "prettier": "@joshuajaco/prettier-config",
   "scripts": {
-    "format": "prettier --write '**/*.{js,json}' --ignore-path .gitignore"
+    "format": "prettier --write '**/*.{js,json}' --ignore-path .gitignore",
+    "test": "mocha tests --recursive --file tests/setup.js"
   },
   "dependencies": {
     "escape-string-regexp": "^2.0.0",
@@ -18,6 +19,9 @@
   },
   "devDependencies": {
     "@joshuajaco/prettier-config": "^1.0.1",
+    "eslint": "^6.1.0",
+    "mocha": "^6.2.0",
+    "mock-require": "^3.0.3",
     "prettier": "^1.18.2"
   }
 }
