--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^6.1.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.2.0",
     "mock-require": "^3.0.3",
     "prettier": "^1.18.2"
