--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@joshuajaco/prettier-config": "^1.0.1",
+    "babel-eslint": "^10.0.2",
     "eslint": "^6.1.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
     "eslint-plugin-node": "^9.1.0",
