--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "lib/index.js",
   "license": "MIT",
+  "author": "Joshua Jacobowitz <joshua.jacobowitz@yahoo.de>",
   "keywords": [
     "eslint",
     "eslintplugin",
