Add repository field to package json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "engines": {
     "node": ">=8.10.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joshuajaco/eslint-plugin-workspaces.git"
+  },
   "prettier": "@joshuajaco/prettier-config",
   "scripts": {
     "format": "prettier --write \"**/*.{js,json}\" --ignore-path .gitignore",
