--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 cache: yarn
 after_success: yarn coverage
+env:
+  - YARN_GPG=no
+os:
+  - linux
+  - windows
 node_js:
   - '13'
   - '12'
