--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "prettier": "@joshuajaco/prettier-config",
   "scripts": {
     "format": "prettier --write \"**/*.{js,json,md,yml}\" --ignore-path .gitignore",
-    "mocha": "mocha tests --recursive --file tests/setup.js",
+    "mocha": "mocha tests --recursive",
     "test": "yarn lint && nyc yarn mocha",
     "coverage": "mkdir -p coverage && touch ./coverage/lcov.info && nyc report --reporter=text-lcov > ./coverage/lcov.info",
     "lint": "eslint . --ignore-path .gitignore",
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
-    "@joshuajaco/get-monorepo-packages": "^1.2.1"
+    "find-workspaces": "^0.0.1"
   },
   "devDependencies": {
     "@joshuajaco/prettier-config": "^2.0.0",
@@ -47,8 +47,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.2",
-    "mock-require": "^3.0.3",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "proxyquire": "^2.1.3"
   }
 }
