--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-workspaces",
-  "version": "0.7.0",
+  "version": "0.8.0-rc1",
   "main": "lib/index.js",
   "license": "MIT",
   "author": "Joshua Jacobowitz <joshua.jacobowitz@yahoo.de>",
