--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "mocha": "^9.1.2",
     "nyc": "^15.1.0",
     "prettier": "^2.4.1",
-    "proxyquire": "^2.1.3"
+    "sinon": "^12.0.1"
   }
 }
