--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-      - run: yarn
-      - run: yarn test
-      - run: yarn coverage
+          cache: 'npm'
+      - run: npm ci
+      - run: npm test
+      - run: npm run coverage
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
