--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,9 +1,9 @@
 name: Node.js CI
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['**']
+    branches: ["**"]
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
       - run: npm ci
       - run: npm test
       - run: npm run coverage
