--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-workspaces",
-  "version": "0.8.0-rc2",
+  "version": "0.8.0",
   "keywords": [
     "eslint",
     "eslintplugin",
