--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "scripts": {
     "format": "prettier -w .",
+    "format:check": "prettier -c .",
     "lint": "eslint . --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "test": "nyc -r=lcov -r=text mocha tests --recursive --file tests/setup.js"
@@ -34,9 +35,9 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
     "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-plugin": "^5.1.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^3.1.0",
