--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "format": "prettier . --write",
     "format:check": "prettier . --check",
-    "lint": "eslint . --ignore-path=.gitignore --max-warnings=0",
+    "lint": "eslint . --max-warnings=0",
     "lint:fix": "npm run lint -- --fix",
     "test": "nyc -r=lcov -r=text mocha tests --recursive --file tests/setup.js"
   },
@@ -37,10 +37,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.0",
-    "eslint": "^8.56.0",
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-plugin": "^6.2.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^17.10.1",
+    "globals": "^15.8.0",
     "mocha": "^10.7.0",
     "nyc": "^17.0.0",
     "prettier": "^3.3.3",
