Add typescript definition

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "exports": "./lib/index.js",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib/",
     "CHANGELOG.md"
