--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node-version: [20.19.2, 22.15.1]
+        node-version: [20.19.6, 22.21.1, 24.12.0]
     steps:
       - name: Set git to use LF
         run: |
